--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,2 @@
-# Example environment variables
-APP_ENV=production
-APP_NAME=ec2-fastapi-starter
-PORT=8000
+# Backend API base URL used by the Next.js frontend
+NEXT_PUBLIC_API_BASE_URL=http://localhost:8000/api/v1
